src/parser/snapshots/nox__parser__tests__tables__create_empty.snap
---
source: src/parser/tests.rs
expression: chunk.code
---
[
    MakeTable(0),
    WriteGlobal(0),
    PushNil,
    Return,
]
